188
This looks to have been fixed sometime since 2.7.1 (which shows the reported behavior) as now the output is the reasonable
{code}
Fatal.scala:3: error: value foo is not a member of object Fatal.this.o
  import o.foo._
           ^
{code}
